fixed alignment of proj duration

--- a/src/main/resources/static/styles/ProjectStyles.css
+++ b/src/main/resources/static/styles/ProjectStyles.css
@@ -51,7 +51,7 @@
 .container-info-date{
 	font-size: 1.5rem;
 	font-weight: 500;
-	text-wrap: nowrap;
+	text-align: center;
 	font-family: 'Montserrat', sans-serif;
 
 }
